--- a/style.css
+++ b/style.css
@@ -41,3 +41,20 @@ ul {
 width: 100px;
 height: 30px;
 }
+
+.list {
+  padding: 20px;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+}
+.list-item {
+  padding: 10px;
+  width: calc(100%-60px)/3;
+  border: 1px solid #000;
+}
+.list-item-title {
+  margin-bottom: 10px;
+}
+.list-item-description {
+}
