--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
 }
-
 html {
   box-sizing: border-box;
 }
+
 html * {
   box-sizing: inherit;
 }
@@ -18,6 +18,7 @@ ul {
   width: 50vw;
   padding: 20px;
   margin: 0 auto;
+  margin-bottom: 30px;
   border: 1px solid #000;
 }
 .form-todo-label {
@@ -41,6 +42,24 @@ ul {
   width: 100px;
   height: 30px;
 }
+/* Filter */
+
+.filter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 48px;
+}
+.filter-title {
+  width: 80%;
+  height: 40px;
+}
+
+/* list */
 
 .list {
   padding: 20px;
